# agentzarvis

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  windows-notes.md
app/: main.py  orchestrator.py
app/agents/: action_agent.py  inbox_agent.py  meeting_agent.py  monitor_agent.py  planner_agent.py  summary_agent.py
app/prompts/: inbox.md  meeting.md  planner.md
app/rag/: retrieval_nim.py  s3_indexer.py
app/routes/: brief.py
app/utils/: llm_client.py  retrieval_nim.py  s3_utils.py
data_samples/: calendar.ics  emails.json  meeting.txt
deploy/: eks-deployment.yaml  eks-service.yaml
docs/: api_contract.md
scripts/: run_app.sh  setup.sh  stop_app.sh
ui/: mock_response.json  streamlit_dashboard.py
